1999-11-19  Matthias Andree <mandree@dosis.uni-dortmund.de>

	* mailcrypt.texi: Fixed bug which spread index over many pages.
	
1999-09-08  Brian Warner  <warner@lothar.com>

	* mc-gpg.el: revamp decrypt and verify parsers to handle
	gnupg-0.9.6 though 1.0.0 . Older versions have slight problems:
	unknown signators and symmetrically-encrypted messages tend to
	make mailcrypt think the message is corrupted, and some incidental
	information (keyids for unknown keys, some signature dates) is
	unavailable. Doesn't used stderr at all, barely uses the exit
	status.

1999-07-20  Leonard R. Budney  <lbudney@pobox.com>

	* mc-pgp.el: Added check for PGP version mismatch when using
	PGP 2.6.

	* mailcrypt.info-1, mailcrypt.info-2, mailcrypt.info: Latest
	info files.

	* mc-gpg.el: Incorporated Brian Warner's Changes into GPG support.
	Specific changes are noted in his Changelog entries, below.

1999-07-18  Leonard R. Budney  <lbudney@pobox.com>

	* mc-toplev.el: Changed GNUS interface to look at raw
	articles. Thanks to Mr. Stainless Steel Rat.

	* configure, configure.in: Modified configure script test
	for emacs. When building Mailcrypt in a subshell of XEmacs,
	the script would get confused because XEmacs would set the
	environment variable EMACS to t. Thanks to Todd Sabin.

	* mc-gpg.el: Added catchall pattern in GPG decrypt parser to
	catch arbitrary "decryption failed" messages. This prevents
	random failure from resulting in deleted message bodies! Thanks
	to Robert Bihlmeyer.

1999-07-17  Leonard R. Budney  <lbudney@pobox.com>

	* mc-toplev.el: Changed rmail support so that errors do not
	leave the user in some wacky buffer.

1999-06-15  Brian Warner  <warner@lothar.com>

	* mc-gpg.el: update comments to reflect GPG behavior through
	0.9.7 (no code changes). Tested against 0.9.7, works ok, but
	we're not taking advantage of the new GPG status codes yet.

1999-05-25  Leonard R. Budney  <lbudney@pobox.com>

	* mailcrypt.el: Changed message-box to message-or-box, which